sublimetext package update

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Tistory/
 tstory/
 Browser Sync/
 User/Preferences.sublime-settings
+User/Mariana.sublime-color-scheme
+User/dashboard.sublime-syntax
